--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: "liberize's blog"
-tagline: "Free as the wind."
-description: "一个码农的技术博客，分享折腾的点点滴滴"
+title: "deepnighttwo's blog"
+tagline: "DeepNightTwo"
+description: "DeepNightTwo"
 ---
 {% include JB/setup %}
 
